# agentic_refund_guardrail

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HN_POST.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_question.yml  03_docs.yml  config.yml
.github/workflows/: ci.yml  finalize-release.yml  prepare-release.yml  publish-npm.yml  publish-pypi.yml  release-validation.yml
contracts/: README.md
contracts/parity/: cases.json
docs/: AGENTIC_REFUND_FLOWS.md  GITHUB_SETUP.md  INTEGRATION_GUIDE.md  MANUAL_STEPS.md  STEP_BY_STEP.md
docs/maintainers/: GITHUB_SETUP.md  MANUAL_STEPS.md  PYPI_FIRST_TIME.md  RELEASING.md
examples/: refund_policy.yaml  stripe_example.py
examples/doctor/: README.md  policy.yaml  scenarios.json
examples/langchain-python/: README.md  tool.py
examples/mcp-server-ts/: README.md  server.ts
examples/minimal-python/: README.md  run.py
examples/minimal-ts/: README.md  main.ts  package-lock.json  package.json
examples/openai-tool-calling-ts/: README.md  handler.ts
examples/real-world-ts/: README.md  handler.ts
examples/vercel-ai-sdk-ts/: README.md  route.ts
refund_guard/: __init__.py  __main__.py  _messages.py  _policy.py  _tool.py  _types.py  doctor.py
scripts/: release.py
tests/: conftest.py  test_parity.py  test_policy.py  test_tool.py
